--- a/public/sass/pages/_login.scss
+++ b/public/sass/pages/_login.scss
@@ -4,6 +4,7 @@
   background-color: var(--color-grey-5);
   color: var(--color-yellow-1);
   text-align: center;
+  padding: 5%;
 
   &__Title1{
     font-family: Raleway;
