--- a/public/css/style.css
+++ b/public/css/style.css
@@ -161,7 +161,7 @@ ul {
   font-family: Raleway;
   font-size: 22px;
   font-weight: 600;
-  line-height: 21px;
+  line-height: 20px;
   text-align: center;
   margin-right: 20px; }
   .ButtonTopUP:hover {
@@ -178,7 +178,8 @@ ul {
 @media (max-width: 767px) {
   .ButtonTopUP {
     border: transparent;
-    box-shadow: none; } }
+    box-shadow: none;
+    margin-right: 0px; } }
 
 .ButtonHeader {
   width: 205px;
@@ -236,7 +237,8 @@ ul {
     background-color: transparent !important;
     background: transparent;
     color: var(--color-yellow-1);
-    border: none; } }
+    border: none;
+    padding-left: 10%; } }
 
 @media (max-width: 767px) {
   .ButtonHeader__big {
@@ -551,25 +553,20 @@ ul {
     color: black;
     background-color: white; }
   .TabsPane1__text {
-    font-size: 5rem;
-    text-align: center;
-    margin: 0rem; }
+    text-align: center; }
   .TabsPane1__label {
     font-family: Raleway;
     font-size: 36px;
     font-weight: 800;
     letter-spacing: 1px;
     line-height: 42px;
-    text-align: center; }
+    margin: 1%; }
   .TabsPane1__dropdown {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     flex-wrap: wrap;
-    padding-top: 1.5rem;
-    margin-bottom: 5rem; }
-    .TabsPane1__dropdown__content {
-      flex: 1 1 200px; }
+    padding: 1rem; }
   .TabsPane1__selectedProduct {
     text-align: center;
     padding: 20px;
@@ -586,12 +583,16 @@ ul {
     text-align: center;
     margin: 0rem; }
 
+@media (min-width: 320px) and (max-width: 767px) {
+  .TabsPane1__label {
+    padding: 5%; } }
+
 .dropz {
   width: 17rem;
   height: 5rem;
   padding: 0rem;
   border: 3px solid #3E3E3E;
-  margin-bottom: 10px; }
+  margin: 5%; }
   .dropz__devide {
     width: 100%;
     height: 100%;
