--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -46,7 +46,7 @@
   font-family: Raleway;
   font-size: 22px;
   font-weight: 600;
-  line-height: 21px;
+  line-height: 20px;
   text-align: center;
   margin-right: 20px;
 
@@ -74,6 +74,7 @@
   .ButtonTopUP{
     border: transparent;
     box-shadow: none;
+    margin-right: 0px;
   }
 }
 
@@ -145,6 +146,7 @@
     background: transparent;
     color: var(--color-yellow-1);
     border: none;
+    padding-left: 10%;
   }
 }
 
