--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -57,9 +57,7 @@
     }
 
     &__text{
-      font-size: 5rem ;
       text-align: center ;
-      margin: 0rem;
     }
 
     &__label{
@@ -68,7 +66,7 @@
       font-weight: 800;
       letter-spacing: 1px;
       line-height: 42px;
-      text-align: center;
+      margin: 1%;
     }
 
     &__dropdown{
@@ -76,12 +74,8 @@
       flex-wrap: wrap;
       justify-content: space-around;
       flex-wrap: wrap;
-      padding-top: 1.5rem;
-      margin-bottom: 5rem ;
+      padding: 1rem;
 
-      &__content{
-        flex: 1 1 200px;
-      }
     }
 
     &__selectedProduct{
@@ -105,13 +99,20 @@
 
   }
 
+  @media (min-width: 320px ) and (max-width:767px ) {
+    .TabsPane1__label{
+      padding: 5%;
+      
+    }
+  }
+
 // for component dropdown at TabsPane1
     .dropz{
       width: 17rem;
       height: 5rem;
       padding: 0rem;
       border: 3px solid #3E3E3E;
-      margin-bottom: 10px;
+      margin: 5%;
       &__devide{
         width: 100%;
         height: 100%;
