--- a/public/css/style.css
+++ b/public/css/style.css
@@ -843,12 +843,6 @@ svg {
       width: 100%;
       border-radius: 10px;
       border: 3px solid; }
-    .game__slotItems__items {
-      width: 300px;
-      animation-duration: 5s;
-      animation-timing-function: ease;
-      animation-delay: 5.2s;
-      animation-fill-mode: backwards; }
   .game__slotButton {
     display: flex;
     justify-content: center; }
@@ -1178,6 +1172,10 @@ body {
     font-family: Raleway;
     font-style: italic;
     color: var(--color-yellow-1); }
+
+input:-webkit-autofill {
+  -webkit-text-fill-color: var(--color-yellow-1) !important;
+  -webkit-box-shadow: 0 0 0 34px #3E3E3E inset !important; }
 
 :root {
   --color-yellow-1: #FFCD05;
