--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -16,6 +16,7 @@
 @import "pages/game";
 @import "pages/topupkey";
 @import "pages/user";
+@import "pages/phone";
 
 // reuseable components
 @import "reusable/base";
