fix modal signup login and dropdown profile

--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -34,6 +34,19 @@
         margin: 2rem;
         background-color: var(--color-yellow-1);
         color: var(--color-dark-3);
+
+        &:active{
+          background-color: var(--color-yellow-1) !important;
+          color: var(--color-dark-3);
+        }
+        &:hover{
+          background-color: var(--color-yellow-1);
+          color: var(--color-dark-3);
+        }
+        &:focus{
+          background-color: var(--color-yellow-1);
+          color: var(--color-dark-3);
+        }
       }
     }
 
