--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -187,6 +187,10 @@ ul {
   padding: 0;
   border-radius: 10px;
   background-color: var(--color-yellow-1); }
+  .ButtonHeader:active {
+    background-color: var(--color-yellow-1) !important; }
+  .ButtonHeader:hover {
+    background-color: var(--color-yellow-1); }
   .ButtonHeader__devide {
     width: 100%;
     height: 100%;
@@ -196,8 +200,7 @@ ul {
     display: flex;
     outline: none; }
     .ButtonHeader__devide:active {
-      border-radius: 10px;
-      background-color: var(--color-yellow-1); }
+      border-radius: 10px; }
   .ButtonHeader__big {
     width: 75%;
     display: flex;
@@ -241,6 +244,10 @@ ul {
     padding-left: 10%; } }
 
 @media (max-width: 767px) {
+  .ButtonHeader__devide :active {
+    background-color: transparent !important; } }
+
+@media (max-width: 767px) and (max-width: 767px) {
   .ButtonHeader__big {
     background-color: transparent !important;
     background: transparent;
@@ -248,12 +255,12 @@ ul {
     border: none;
     margin-left: 15px; } }
 
-@media (max-width: 767px) {
+@media (max-width: 767px) and (max-width: 767px) {
   .ButtonHeader__small {
     width: 0px;
     height: 0px; } }
 
-@media (max-width: 767px) {
+@media (max-width: 767px) and (max-width: 767px) {
   .ButtonHeader__iconLogin {
     width: 0px;
     height: 0px; } }
@@ -1031,13 +1038,13 @@ body {
   border-radius: 0;
   border: 5px solid var(--white); }
 
-@media (min-width: 320px) and (max-width: 500px) {
+@media (min-width: 320px) and (max-width: 2000px) {
   .Modalz {
-    margin-top: 20%;
     font-size: 14px;
-    margin-left: 43px;
-    width: 80%;
-    max-width: 100%; } }
+    max-width: 780px; } }
+
+.form-horizontal {
+  width: 100%; }
 
 .inputz {
   border: transparent;
@@ -1073,6 +1080,10 @@ body {
     font-family: Raleway;
     font-style: italic;
     color: var(--color-yellow-1); }
+
+input:-webkit-autofill {
+  -webkit-text-fill-color: var(--color-yellow-1) !important;
+  -webkit-box-shadow: 0 0 0 34px #3E3E3E inset !important; }
 
 :root {
   --color-yellow-1: #FFCD05;
