--- a/public/sass/pages/_game.scss
+++ b/public/sass/pages/_game.scss
@@ -4,7 +4,7 @@
 	&__container{
 		margin: auto;
 		width: 100%;
-		max-width: 720px;
+		max-width: 600px;
 	}
 
 	&__slotLabel{
@@ -23,7 +23,47 @@
 				font-weight: 500;	
 				line-height: 16px;
 			}
+	}
 
+	&__container2{
+		display: flex;
+		justify-content: center;
+	}
+
+	&__convert{
+		text-align: center;
+		&__label{
+			margin: 10px;
+			color: #FFFFFF;
+			font-family: Raleway;
+			font-size: 24px;
+			font-weight: bold;	
+			line-height: 29px;
+
+		}
+		&__input{
+			border-radius: 5px;
+			margin-right: 10px;
+			height: 30px;
+			font-family: Raleway;
+			line-height: 29px;
+			font-size: 21px;
+			padding-left: 10px;
+
+		}
+
+		&__buttonConvert{
+			margin-top: 10px;
+			margin-bottom: 10px;	
+			color: #FFFFFF;	
+			font-family: Raleway;	
+			font-size: 15px;
+			font-weight: 900;	
+			letter-spacing: 3px;	
+			line-height: 33px;
+			border-radius: 8px;
+			background: linear-gradient(180deg, #FAD961 0%, #F76B1C 100%)		
+		}
 	}
 
 	&__slotCoin{
@@ -45,29 +85,30 @@
 		}
 	}
 
-	&__container2{
+	&__container3{
 		display: flex;
 		justify-content: center;
 	}
 
 	&__slotItems{
-		display: flex;
-		justify-content: center;
+		// display: flex;
+		// justify-content: center;
 		width: 360px;
 		border-radius: 30px;
 		background: linear-gradient(180deg, #FAD961 0%, #F76B1C 100%);		
 		padding: 20px;
 		margin-bottom: 10px;
 
-			&__box {
+			&__boxContainer {
 				background-color: black;
-				display: flex;
-				justify-content: center;
 				width: 100%;
 				border-radius: 10px;
 				border: 3px solid;
+				&__box{
+					display: flex;
+				}
+			}
 		}
-	}
 
 	&__slotButton {
 		display: flex;
@@ -103,7 +144,7 @@
 
 .box1 {
 	width: 80%;
-	height: 140px;	
+	height: 100px;	
 	border-radius: 10px;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -116,7 +157,7 @@
 
 .box2 {
 	width: 80%;
-	height: 140px;	
+	height: 100px;	
 	border-radius: 10px;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -128,7 +169,7 @@
 
 .box3 {
 	width: 80%;
-	height: 140px;	
+	height: 100px;	
 	border-radius: 10px;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -140,7 +181,7 @@
 
 .box4 {
 	width: 80%;
-	height: 140px;	
+	height: 100px;	
 	border-radius: 10px;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -152,7 +193,7 @@
 
 .box5 {
 	width: 80%;
-	height: 140px;	
+	height: 100px;	
 	border-radius: 10px;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -164,7 +205,7 @@
 
 .box6 {
 	width: 80%;
-	height: 140px;	
+	height: 100px;	
 	border-radius: 10px;
 	margin-top: 3px;
 	margin-bottom: 3px;
@@ -177,7 +218,7 @@
 .boxaladin {
 	background-image: url("https://steemit-production-imageproxy-thumbnail.s3.amazonaws.com/U5du7QzV9m547GdgFGVuh2ckhRKGL9Q_1680x8400");
 	width: 80%;
-	height: 140px;	
+	height: 100px;	
 	border-radius: 10px;
 	margin-top: 3px;
 	margin-bottom: 3px;
