--- a/public/css/style.css
+++ b/public/css/style.css
@@ -890,7 +890,8 @@ ul {
     margin: auto;
     width: 100%;
     max-width: 720px;
-    color: var(--color-yellow-1); }
+    color: var(--color-yellow-1);
+    padding: 5%; }
   .User__Label {
     display: flex;
     justify-content: center;
@@ -921,11 +922,14 @@ ul {
       .User__Phone__row2__number {
         width: 75%;
         display: flex;
-        justify-content: flex-start; }
+        justify-content: flex-start;
+        align-items: center;
+        font-size: 30px; }
       .User__Phone__row2__unverify {
         width: 75%;
         display: flex;
-        justify-content: flex-end; }
+        justify-content: flex-end;
+        align-items: center; }
         .User__Phone__row2__unverify__1 {
           width: 33.3%; }
           .User__Phone__row2__unverify__1__button1 {
@@ -941,12 +945,17 @@ ul {
       .User__Phone__row2__verify {
         width: 75%;
         display: flex;
-        justify-content: flex-end; }
+        justify-content: flex-end;
+        align-items: center; }
         .User__Phone__row2__verify__1 {
-          width: 33.3%; }
-          .User__Phone__row2__verify__1__button4 {
+          width: 33.3%;
+          display: flex;
+          justify-content: flex-end;
+          align-items: center; }
+          .User__Phone__row2__verify__1__label {
             width: 100%;
-            text-align: center; }
+            text-align: center;
+            font-size: 30px; }
         .User__Phone__row2__verify__2 {
           width: 33.3%; }
           .User__Phone__row2__verify__2__button5 {
@@ -969,6 +978,26 @@ ul {
       .User__Phone__row3__button2 {
         width: 40%;
         margin: 5%; }
+
+@media (min-width: 200px) and (max-width: 766px) {
+  .User__Label {
+    font-size: 20px; } }
+
+@media (min-width: 200px) and (max-width: 766px) {
+  .User__show {
+    font-size: 18px; } }
+
+@media (min-width: 200px) and (max-width: 766px) {
+  .User__phone {
+    font-size: 18px; } }
+
+@media (min-width: 200px) and (max-width: 766px) {
+  .User__Phone__row2__verify__1__label {
+    font-size: 10px; } }
+
+@media (min-width: 200px) and (max-width: 766px) {
+  .User__Phone__row2__number {
+    font-size: 18px; } }
 
 .ReactModal__Overlay--after-open {
   background-color: transparent !important; }
@@ -1011,7 +1040,8 @@ ul {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%; }
+    width: 100%;
+    color: black; }
   .ModalContent__button {
     width: 100%;
     display: flex;
