--- a/public/sass/pages/_user.scss
+++ b/public/sass/pages/_user.scss
@@ -6,6 +6,7 @@
         width: 100%;
         max-width: 720px;
         color: var(--color-yellow-1);
+        padding: 5%;
     }
     
 
@@ -51,12 +52,15 @@
                 width: 75%;
                 display: flex;
                 justify-content: flex-start;
+                align-items: center;
+                font-size: 30px;
             }
 
             &__unverify{
                 width: 75%;
                 display: flex;
                 justify-content: flex-end;
+                align-items: center;
 
                 &__1{
                     width: 33.3%;
@@ -83,11 +87,17 @@
                 width: 75%;
                 display: flex;
                 justify-content: flex-end;
+                align-items: center;
+
                 &__1{
                     width: 33.3%;
-                    &__button4{
+                    display: flex;
+                    justify-content: flex-end;
+                    align-items: center;
+                    &__label{
                         width: 100%;
                         text-align: center;
+                        font-size: 30px;
                     }
                 }
                 &__2{
@@ -126,4 +136,36 @@
             }
         }
     }
+}
+
+
+@media (min-width: 200px) and (max-width:766px) {
+  .User__Label{
+      font-size: 20px
+  }
+}
+
+@media (min-width: 200px) and (max-width:766px) {
+  .User__show{
+      font-size: 18px
+  }
+}
+
+@media (min-width: 200px) and (max-width:766px) {
+  .User__phone{
+      font-size: 18px
+  }
+}
+
+@media (min-width: 200px) and (max-width:766px) {
+  .User__Phone__row2__verify__1__label{
+      font-size: 10px
+  }
+}
+
+
+@media (min-width: 200px) and (max-width:766px) {
+  .User__Phone__row2__number{
+      font-size: 18px
+  }
 }
