--- a/public/sass/pages/_game.scss
+++ b/public/sass/pages/_game.scss
@@ -93,7 +93,7 @@
 	&__slotItems{
 		// display: flex;
 		// justify-content: center;
-		width: 360px;
+		width: 70%;
 		border-radius: 30px;
 		background: linear-gradient(180deg, #FAD961 0%, #F76B1C 100%);		
 		padding: 20px;
