--- a/public/sass/pages/_user.scss
+++ b/public/sass/pages/_user.scss
@@ -7,6 +7,7 @@
         max-width: 720px;
         color: var(--color-yellow-1);
         padding: 5%;
+        padding-top: 0%;
     }
     
 
@@ -97,7 +98,7 @@
                     &__label{
                         width: 100%;
                         text-align: center;
-                        font-size: 30px;
+                        font-size: 25px;
                     }
                 }
                 &__2{
@@ -138,6 +139,11 @@
     }
 }
 
+@media (min-width: 200px) and (max-width:766px) {
+  .User__container{
+      padding-top: 5%;
+  }
+}
 
 @media (min-width: 200px) and (max-width:766px) {
   .User__Label{
