--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -890,7 +890,9 @@ ul {
     margin: auto;
     width: 100%;
     max-width: 720px;
-    color: var(--color-yellow-1); }
+    color: var(--color-yellow-1);
+    padding: 5%;
+    padding-top: 0%; }
   .User__Label {
     display: flex;
     justify-content: center;
@@ -921,11 +923,14 @@ ul {
       .User__Phone__row2__number {
         width: 75%;
         display: flex;
-        justify-content: flex-start; }
+        justify-content: flex-start;
+        align-items: center;
+        font-size: 30px; }
       .User__Phone__row2__unverify {
         width: 75%;
         display: flex;
-        justify-content: flex-end; }
+        justify-content: flex-end;
+        align-items: center; }
         .User__Phone__row2__unverify__1 {
           width: 33.3%; }
           .User__Phone__row2__unverify__1__button1 {
@@ -941,12 +946,17 @@ ul {
       .User__Phone__row2__verify {
         width: 75%;
         display: flex;
-        justify-content: flex-end; }
+        justify-content: flex-end;
+        align-items: center; }
         .User__Phone__row2__verify__1 {
-          width: 33.3%; }
-          .User__Phone__row2__verify__1__button4 {
+          width: 33.3%;
+          display: flex;
+          justify-content: flex-end;
+          align-items: center; }
+          .User__Phone__row2__verify__1__label {
             width: 100%;
-            text-align: center; }
+            text-align: center;
+            font-size: 25px; }
         .User__Phone__row2__verify__2 {
           width: 33.3%; }
           .User__Phone__row2__verify__2__button5 {
@@ -969,6 +979,81 @@ ul {
       .User__Phone__row3__button2 {
         width: 40%;
         margin: 5%; }
+
+@media (min-width: 200px) and (max-width: 766px) {
+  .User__container {
+    padding-top: 5%; } }
+
+@media (min-width: 200px) and (max-width: 766px) {
+  .User__Label {
+    font-size: 20px; } }
+
+@media (min-width: 200px) and (max-width: 766px) {
+  .User__show {
+    font-size: 18px; } }
+
+@media (min-width: 200px) and (max-width: 766px) {
+  .User__phone {
+    font-size: 18px; } }
+
+@media (min-width: 200px) and (max-width: 766px) {
+  .User__Phone__row2__verify__1__label {
+    font-size: 10px; } }
+
+@media (min-width: 200px) and (max-width: 766px) {
+  .User__Phone__row2__number {
+    font-size: 18px; } }
+
+.ReactModal__Overlay--after-open {
+  background-color: transparent !important; }
+
+.ModalPhone {
+  border-radius: 0;
+  border: 5px solid var(--color-yellow-1);
+  position: fixed;
+  top: 35%;
+  left: 35%;
+  width: 30%;
+  height: 25%;
+  z-index: 10;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+@media (min-width: 767px) and (max-width: 1280px) {
+  .ModalPhone {
+    top: 30%;
+    left: 30%;
+    width: 40%; } }
+
+@media (min-width: 200px) and (max-width: 766px) {
+  .ModalPhone {
+    top: 25%;
+    left: 15%;
+    width: 70%; } }
+
+.ModalContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 10%; }
+  .ModalContent__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    color: black; }
+  .ModalContent__button {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 2.5%; }
+  .ModalContent__select {
+    width: 80%; }
 
 * {
   margin: 0;
@@ -1068,30 +1153,22 @@ body {
     color: #FFCD05; }
 
 .Modalz {
-  margin-top: 10%;
+  margin-top: 8%;
   border-radius: 0;
   border: 5px solid var(--white); }
 
-@media (min-width: 320px) and (max-width: 500px) {
+@media (min-width: 767px) {
   .Modalz {
-    margin-top: 20%;
     font-size: 14px;
-    margin-left: 43px;
-    width: 80%;
-    max-width: 100%; } }
+    max-width: 730px; } }
 
-.overlayz {
-  position: 'absolute';
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: navy; }
+@media (min-width: 200px) and (max-width: 766px) {
+  .Modalz {
+    font-size: 14px;
+    max-width: 600px; } }
 
-.ModalzPhone {
-  margin-top: 10%;
-  border-radius: 0;
-  border: 5px solid var(--white); }
+.form-horizontal {
+  width: 100%; }
 
 :root {
   --color-yellow-1: #FFCD05;
