--- a/public/css/style.css
+++ b/public/css/style.css
@@ -990,7 +990,8 @@ ul {
 
 @media (min-width: 200px) and (max-width: 766px) {
   .User__show {
-    font-size: 18px; } }
+    font-size: 18px;
+    padding: 2.5%; } }
 
 @media (min-width: 200px) and (max-width: 766px) {
   .User__phone {
@@ -1002,7 +1003,7 @@ ul {
 
 @media (min-width: 200px) and (max-width: 766px) {
   .User__Phone__row2__number {
-    font-size: 18px; } }
+    font-size: 15px; } }
 
 .ReactModal__Overlay--after-open {
   background-color: transparent !important; }
