--- a/public/sass/pages/_user.scss
+++ b/public/sass/pages/_user.scss
@@ -92,7 +92,7 @@
 
                 &__1{
                     width: 33.3%;
-                    display: flex;
+                     display: flex;
                     justify-content: flex-end;
                     align-items: center;
                     &__label{
@@ -147,31 +147,32 @@
 
 @media (min-width: 200px) and (max-width:766px) {
   .User__Label{
-      font-size: 20px
+      font-size: 20px;
   }
 }
 
 @media (min-width: 200px) and (max-width:766px) {
   .User__show{
-      font-size: 18px
+      font-size: 18px;
+      padding: 2.5%;
   }
 }
 
 @media (min-width: 200px) and (max-width:766px) {
   .User__phone{
-      font-size: 18px
+      font-size: 18px;
   }
 }
 
 @media (min-width: 200px) and (max-width:766px) {
   .User__Phone__row2__verify__1__label{
-      font-size: 10px
+      font-size: 10px;
   }
 }
 
 
 @media (min-width: 200px) and (max-width:766px) {
   .User__Phone__row2__number{
-      font-size: 18px
+      font-size: 15px;
   }
 }
