--- a/public/css/style.css
+++ b/public/css/style.css
@@ -145,6 +145,27 @@ ul {
     margin: 0rem;
     padding: 0rem; }
 
+@media (max-width: 767px) {
+  .HeaderTop {
+    display: none; } }
+
+.HeaderTopM {
+  background-color: #3E3E3E;
+  border-bottom: 4px solid #FFCD05; }
+  .HeaderTopM__logo {
+    margin: 0px auto; }
+  .HeaderTopM__Right {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    margin: 0rem;
+    padding: 0rem; }
+
+@media (min-width: 768px) {
+  .HeaderTopM {
+    display: none; } }
+
 .IconBurger {
   background-color: var(--color-yellow-1); }
 
