--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,7 +153,8 @@ ul {
   background-color: #3E3E3E;
   border-bottom: 4px solid #FFCD05; }
   .HeaderTopM__logo {
-    margin: 0px auto; }
+    margin: 0px auto;
+    padding-right: 5%; }
   .HeaderTopM__Right {
     display: flex;
     flex-direction: column;
