--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -8,9 +8,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    border-top: 2px solid var(--color-yellow-1);
 
     &__Left{
-      width: 50%;
+      width: 43%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -23,17 +24,21 @@
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
-        padding: 1rem;
+        height: 100%;
       }
 
       &__label{
-        margin: 2rem;
       }
 
       &__button{
-        margin: 2rem;
+        margin-top: 1rem;
         background-color: var(--color-yellow-1);
         color: var(--color-dark-3);
+        font-size: 18px;
+        font-weight: bold;
+        line-height: 21px;
+        font-family: Raleway;
+        border-radius: 4px;
 
         &:active{
           background-color: var(--color-yellow-1) !important;
@@ -160,7 +165,6 @@
 }
 .LogoFooter{
   width: 240px;
-  height: 60px;
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
