--- a/public/sass/pages/_game.scss
+++ b/public/sass/pages/_game.scss
@@ -5,6 +5,8 @@
 		margin: auto;
 		width: 100%;
 		max-width: 600px;
+		background-color: var(--color-grey-5);
+
 	}
 
 	&__slotLabel{
@@ -132,7 +134,43 @@
 			background: linear-gradient(180deg, #FAD961 0%, #F76B1C 100%)		
 		}
 	}
+	&__modal{
+		&__container{
+			background-color: var(--color-grey-5);
+		}
+		&__outerContainer{
+			display: flex;
+			justify-content: center;
+		}
+		&__boxContainer {
+			background-color: black;
+			width: 80%;
+			border-radius: 10px;
+			border: 3px solid;
+			&__item{
+				display: flex;
+			}
+		}
+		&__paragraph{
+			margin-top: 10px;
+			margin-bottom: 20px;
+			text-align: center;
+			font-family: raleway;
+			color: white;
+			font-size: 14px;
+			font-weight: 500;	
+			line-height: 16px;
+		
+		}
+	}
 }
+
+@media (min-width: 767px ){
+  .game__modal{
+		max-width: 650px;
+  }
+}
+
 @media (min-width: 275px ) and (max-width:500px ) {
   .game__slotItems{
 		padding: 15px;
