--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -112,7 +112,7 @@
       height: 5rem;
       padding: 0rem;
       border: 3px solid #3E3E3E;
-      margin: 5%;
+      margin-bottom: 5%;
       &__devide{
         width: 100%;
         height: 100%;
