--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,19 +8,16 @@
     justify-content: center;
     border-top: 2px solid var(--color-yellow-1); }
     .footerz__Top__Left {
-      width: 43%;
+      width: 50%;
       display: flex;
-      justify-content: center;
-      align-items: center; }
-      .footerz__Top__Left__box {
-        display: flex;
-        flex-direction: column;
-        color: var(--color-yellow-1);
-        font-family: Raleway;
-        font-size: 18px;
-        font-weight: bold;
-        line-height: 21px;
-        height: 100%; }
+      flex-direction: column;
+      align-items: start;
+      padding-left: 5%;
+      color: var(--color-yellow-1);
+      font-family: Raleway;
+      font-size: 18px;
+      font-weight: bold;
+      line-height: 21px; }
       .footerz__Top__Left__button {
         margin-top: 1rem;
         background-color: var(--color-yellow-1);
@@ -83,6 +80,12 @@
           padding-top: 20px;
           display: flex;
           justify-content: space-between; }
+  @media (max-width: 767px) {
+    .footerz .footerz__Top__Left {
+      padding: 0%; } }
+  @media (max-width: 767px) {
+    .footerz .LogoFooter {
+      width: 180px; } }
   .footerz__Bot {
     display: flex;
     flex-direction: column;
