--- a/public/sass/components/_footer.scss
+++ b/public/sass/components/_footer.scss
@@ -11,24 +11,17 @@
     border-top: 2px solid var(--color-yellow-1);
 
     &__Left{
-      width: 43%;
+      width: 50%;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      flex-direction: column;
+      align-items: start;
+      padding-left: 5%;
 
-      &__box{
-        display: flex;
-        flex-direction: column;
-        color: var(--color-yellow-1);
-        font-family: Raleway;
-        font-size: 18px;
-        font-weight: bold;
-        line-height: 21px;
-        height: 100%;
-      }
-
-      &__label{
-      }
+      color: var(--color-yellow-1);
+      font-family: Raleway;
+      font-size: 18px;
+      font-weight: bold;
+      line-height: 21px;
 
       &__button{
         margin-top: 1rem;
@@ -123,6 +116,18 @@
 
   }
 
+  @media (max-width: 767px) {
+  .footerz__Top__Left{
+    padding: 0%;
+    }
+  }
+
+@media (max-width: 767px) {
+  .LogoFooter{
+    width: 180px;
+    }
+  }
+
   &__Bot{
     display: flex;
     flex-direction: column;
@@ -160,9 +165,9 @@
   .footerz__bot{
     padding-left: 5%;
     padding-right: 5%;
-
   }
 }
+
 .LogoFooter{
   width: 240px;
   margin-top: 2rem;
