--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,8 +11,7 @@
       width: 50%;
       display: flex;
       flex-direction: column;
-      align-items: start;
-      padding-left: 5%;
+      align-items: center;
       color: var(--color-yellow-1);
       font-family: Raleway;
       font-size: 18px;
