adding email verification and requestreset password

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -17,6 +17,8 @@
 @import "pages/topupkey";
 @import "pages/user";
 @import "pages/phone";
+@import "pages/requestResetPassword";
+@import "pages/EmailVerification";
 
 // reuseable components
 @import "reusable/base";
