--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -5,9 +5,10 @@
   .footerz__Top {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center; }
+    justify-content: center;
+    border-top: 2px solid var(--color-yellow-1); }
     .footerz__Top__Left {
-      width: 50%;
+      width: 43%;
       display: flex;
       justify-content: center;
       align-items: center; }
@@ -19,13 +20,16 @@
         font-size: 18px;
         font-weight: bold;
         line-height: 21px;
-        padding: 1rem; }
-      .footerz__Top__Left__label {
-        margin: 2rem; }
+        height: 100%; }
       .footerz__Top__Left__button {
-        margin: 2rem;
+        margin-top: 1rem;
         background-color: var(--color-yellow-1);
-        color: var(--color-dark-3); }
+        color: var(--color-dark-3);
+        font-size: 18px;
+        font-weight: bold;
+        line-height: 21px;
+        font-family: Raleway;
+        border-radius: 4px; }
         .footerz__Top__Left__button:active {
           background-color: var(--color-yellow-1) !important;
           color: var(--color-dark-3); }
@@ -112,7 +116,6 @@
 
 .LogoFooter {
   width: 240px;
-  height: 60px;
   margin-top: 2rem;
   margin-bottom: 2rem; }
 
@@ -606,7 +609,7 @@ ul {
   height: 5rem;
   padding: 0rem;
   border: 3px solid #3E3E3E;
-  margin: 5%; }
+  margin-bottom: 5%; }
   .dropz__devide {
     width: 100%;
     height: 100%;
@@ -742,7 +745,8 @@ ul {
   .game__container {
     margin: auto;
     width: 100%;
-    max-width: 600px; }
+    max-width: 600px;
+    background-color: var(--color-grey-5); }
   .game__slotLabel {
     text-align: center;
     font-family: raleway; }
@@ -834,6 +838,31 @@ ul {
       line-height: 33px;
       border-radius: 8px;
       background: linear-gradient(180deg, #FAD961 0%, #F76B1C 100%); }
+  .game__modal__container {
+    background-color: var(--color-grey-5); }
+  .game__modal__outerContainer {
+    display: flex;
+    justify-content: center; }
+  .game__modal__boxContainer {
+    background-color: black;
+    width: 80%;
+    border-radius: 10px;
+    border: 3px solid; }
+    .game__modal__boxContainer__item {
+      display: flex; }
+  .game__modal__paragraph {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    text-align: center;
+    font-family: raleway;
+    color: white;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16px; }
+
+@media (min-width: 767px) {
+  .game__modal {
+    max-width: 650px; } }
 
 @media (min-width: 275px) and (max-width: 500px) {
   .game__slotItems {
