adding page reset password

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -18,7 +18,8 @@
 @import "pages/user";
 @import "pages/phone";
 @import "pages/requestResetPassword";
-@import "pages/EmailVerification";
+@import "pages/emailVerification";
+@import "pages/resetPassword";
 
 // reuseable components
 @import "reusable/base";
