--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -1147,6 +1147,25 @@ ul {
     background-color: white;
     width: 80%; }
 
+.RequestReset {
+  padding: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
+  background-color: var(--color-grey-5); }
+  .RequestReset__text {
+    text-align: center;
+    color: var(--color-yellow-1); }
+
+.emailVerification {
+  padding: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
+  background-color: var(--color-grey-5); }
+  .emailVerification__text {
+    text-align: center;
+    color: var(--color-yellow-1);
+    padding: 0%; }
+
 * {
   margin: 0;
   padding: 0; }
