--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1156,6 +1156,26 @@ ul {
     text-align: center;
     color: var(--color-yellow-1); }
 
+.emailVerification {
+  padding: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
+  background-color: var(--color-grey-5); }
+  .emailVerification__text {
+    text-align: center;
+    color: var(--color-yellow-1);
+    padding: 0%; }
+
+.resetPassword {
+  padding: 10%;
+  padding-left: 20%;
+  padding-right: 20%;
+  background-color: var(--color-grey-5); }
+  .resetPassword__text {
+    text-align: center;
+    color: var(--color-yellow-1);
+    padding: 0%; }
+
 * {
   margin: 0;
   padding: 0; }
