--- a/public/css/style.css
+++ b/public/css/style.css
@@ -284,7 +284,7 @@ ul {
   padding: 2rem; }
   .Signup__Title {
     font-family: Raleway;
-    font-size: 14px;
+    font-size: 20px;
     font-weight: 500;
     line-height: 16px;
     text-align: center;
@@ -296,7 +296,13 @@ ul {
     line-height: 24px;
     text-align: center; }
   .Signup__Form {
-    text-align: left; }
+    text-align: left;
+    font-size: 17px; }
+  .Signup__Sex {
+    border-radius: 5px;
+    background-color: var(--color-grey-5);
+    color: white;
+    margin-left: 5px; }
   .Signup__ButtonLogin {
     color: var(--color-grey-5);
     background-color: var(--color-yellow-1);
@@ -1211,6 +1217,7 @@ body {
 .inputz {
   border: transparent;
   border-bottom: 2px solid var(--color-yellow-1);
+  font-size: 15px;
   background: transparent;
   font-family: Raleway;
   font-style: italic;
