--- a/public/sass/pages/_signup.scss
+++ b/public/sass/pages/_signup.scss
@@ -8,7 +8,7 @@
 
   &__Title{
     font-family: Raleway;
-    font-size: 14px;
+    font-size: 20px;
     font-weight: 500;
     line-height: 16px;
     text-align: center;
@@ -25,6 +25,14 @@
 
   &__Form{
     text-align: left;
+    font-size: 17px;
+  }
+
+  &__Sex{
+    border-radius: 5px;
+    background-color: var(--color-grey-5);
+    color: white;
+    margin-left: 5px;
   }
 
   &__ButtonLogin{
