fixing & create dropdown for bolt

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -20,6 +20,7 @@
 @import "pages/requestResetPassword";
 @import "pages/emailVerification";
 @import "pages/resetPassword";
+@import "pages/invoice";
 
 // reuseable components
 @import "reusable/base";
