--- a/public/sass/reusable/_base.scss
+++ b/public/sass/reusable/_base.scss
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Raleway', Raleway;
     font-weight: 400;
     line-height: 1.6;
     color: var(--color-grey-dark-2);
