--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1198,6 +1198,17 @@ ul {
     color: var(--color-yellow-1);
     padding: 0%; }
 
+.invoice {
+  background-color: #3E3E3E;
+  color: #FFCD05; }
+  .invoice__container {
+    padding: 2.5%;
+    padding-left: 15%;
+    padding-right: 15%; }
+  .invoice__text {
+    text-align: center;
+    margin-bottom: 20px; }
+
 * {
   margin: 0;
   padding: 0; }
@@ -1212,7 +1223,7 @@ html {
   font-size: 62.5%; }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Raleway', Raleway;
   font-weight: 400;
   line-height: 1.6;
   color: var(--color-grey-dark-2);
