--- a/public/sass/pages/_invoice.scss
+++ b/public/sass/pages/_invoice.scss
@@ -2,6 +2,7 @@
     background-color: #3E3E3E;
     color: #FFCD05;
     &__container{
+        min-height: 30rem;
         padding: 2.5%;
         padding-left: 15%;
         padding-right: 15%;
