--- a/public/sass/reusable/_components.scss
+++ b/public/sass/reusable/_components.scss
@@ -73,6 +73,7 @@
 
 .form-horizontal{
   width: 100%;
+  font-size: 20px;
 }
 
 .inputz{
@@ -81,6 +82,7 @@
   background: transparent;
   font-family: Raleway;
   font-style: italic;
+  font-size: 17px;
   color: var(--color-yellow-1);
   box-shadow: none ;
   &:focus{
