--- a/public/sass/pages/_game.scss
+++ b/public/sass/pages/_game.scss
@@ -1,3 +1,17 @@
+.close{
+	color: var(--color-yellow-1);
+	// &:active{
+	// 	background-color: var(--color-yellow-1);
+	// }
+	&:hover{
+		color: var(--color-yellow-1);
+	}
+	&:focus{
+		color: var(--color-yellow-1);
+		outline: none;
+	}
+}
+
 .game{
 	background-color: var(--color-grey-5);
 
@@ -236,6 +250,7 @@
 
 
 .gameModal{
+	color: var(--color-yellow-1);
 	background-color: black;
 	border: 5px solid var(--color-yellow-1);
 	top: 25%;
@@ -259,7 +274,7 @@
 			margin: 2.5%;
 			text-align: center;
 			font-family: raleway;
-			color: var(--color-yellow-1);
+			// color: var(--color-yellow-1);
 			font-size: 20px;
 			font-weight: 500;	
 			line-height: 16px;
