--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -90,11 +90,13 @@
   &__label{
     font-size: 18px;
     cursor:inherit;
+    margin: 0rem;
 
     &__italic{
       font-size: 18px;
       font-style: italic;
       cursor:inherit;
+      margin: 0rem;
     }
     
   }
