--- a/public/sass/pages/_user.scss
+++ b/public/sass/pages/_user.scss
@@ -4,6 +4,7 @@
     &__container{
         margin: auto;
         width: 100%;
+        height: 100%;
         max-width: 720px;
         color: var(--color-yellow-1);
         padding: 5%;
@@ -139,39 +140,40 @@
     }
 }
 
-@media (min-width: 200px) and (max-width:766px) {
+@media (min-width: 200px) and (max-width:768px) {
     .User__container{
         padding-top: 5%;
+        padding-bottom: 5%;
     }
 }
 
-@media (min-width: 200px) and (max-width:766px) {
+@media (min-width: 200px) and (max-width:768px) {
   .User__Label{
       font-size: 20px;
   }
 }
 
-@media (min-width: 200px) and (max-width:766px) {
+@media (min-width: 200px) and (max-width:768px) {
   .User__show{
       font-size: 18px;
       padding: 2.5%;
   }
 }
 
-@media (min-width: 200px) and (max-width:766px) {
+@media (min-width: 200px) and (max-width:768px) {
   .User__phone{
       font-size: 18px;
   }
 }
 
-@media (min-width: 200px) and (max-width:766px) {
+@media (min-width: 200px) and (max-width:768px) {
   .User__Phone__row2__verify__1__label{
       font-size: 10px;
   }
 }
 
 
-@media (min-width: 200px) and (max-width:766px) {
+@media (min-width: 200px) and (max-width:768px) {
   .User__Phone__row2__number{
       font-size: 15px;
   }
