--- a/public/sass/pages/_user.scss
+++ b/public/sass/pages/_user.scss
@@ -68,6 +68,7 @@
                     width: 33.3%;
                     &__button1{
                         width: 100%;
+                        margin: -4px;
                     }
                 }
 
@@ -81,6 +82,7 @@
                     width: 33.3%;
                     &__button3{
                         width: 100%;
+                        margin: 4px;
                     }
                 }
             }
@@ -100,6 +102,7 @@
                         width: 100%;
                         text-align: center;
                         font-size: 25px;
+                        margin: -4px;
                     }
                 }
                 &__2{
@@ -115,6 +118,7 @@
                     align-items: center;
                     &__check{
                         height: 20px;
+                        margin: 4px;
                     }
                 }
             }
@@ -128,12 +132,10 @@
 
             &__button1{
                 width: 45%;
-                margin: 5%;
             }
 
             &__button2{
                 width: 45%;
-                margin: 5%;
             }
         }
     }
