--- a/public/sass/pages/_game.scss
+++ b/public/sass/pages/_game.scss
@@ -260,6 +260,7 @@
 		border-radius: 0;
 		background-color: black;
 	}
+
 	&__Container {
 		display: flex;
 		flex-direction: column;
@@ -281,23 +282,46 @@
 		}
 	}
 	&__icon{
-		width: 50px;
-		height: 50px;
+		width: 250px;
+		height: 250px;
 	}
 }
 
-@media (min-width: 767px) and (max-width:1280px){
-  .gameModal{
-    top: 30%;
-    left: 30%;
-    width: 40%;
-  }
-} 
 
-@media (min-width: 200px) and (max-width:766px) {
-  .gameModal{
-    top: 25%;
-    left: 15%;
-    width: 70%;
-  }
-} 
+
+
+@media (min-width: 200px) and (max-width: 766px) {
+    .gameModal__icon {
+        width: 150px;
+        height: 150px
+    }
+}
+
+@media (min-width: 767px) and (max-width: 1280px) {
+    .gameModal__icon {
+        width: 200px;
+    	height: 200px
+    }
+}
+
+@media (min-width: 767px) and (max-width: 1280px) {
+    .gameModal__Container__text {
+		margin: 2.5%;
+		text-align: center;
+		font-family: raleway;
+		font-size: 30px;
+		font-weight: 500;
+		line-height: 16px
+    }
+}
+
+@media (min-width: 200px) and (max-width: 766px) {
+    .gameModal__Container__text {
+        margin: 2.5%;
+        text-align: center;
+        font-family: raleway;
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 16px
+    }
+}
