fixing a little bit games

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -816,7 +816,8 @@ li {
     background-color: var(--color-grey-5); }
   .game__slotLabel {
     text-align: center;
-    font-family: raleway; }
+    font-family: raleway;
+    padding-bottom: 50px; }
     .game__slotLabel__h1 {
       color: #FFCD05;
       font-size: 48px;
@@ -824,7 +825,7 @@ li {
       line-height: 56px; }
     .game__slotLabel__paragraph {
       color: white;
-      font-size: 14px;
+      font-size: 20px;
       font-weight: 500;
       line-height: 16px; }
   .game__prize {
@@ -854,7 +855,7 @@ li {
     text-align: center; }
     .game__convert__label {
       margin: 10px;
-      color: #FFFFFF;
+      color: #FFCD05;
       font-family: Raleway;
       font-size: 24px;
       font-weight: bold;
@@ -881,7 +882,8 @@ li {
   .game__slotCoin {
     display: flex;
     justify-content: center;
-    align-items: center; }
+    align-items: center;
+    padding: 25px; }
     .game__slotCoin__icon {
       width: 10%;
       margin: 10px; }
