--- a/public/sass/pages/_game.scss
+++ b/public/sass/pages/_game.scss
@@ -27,6 +27,7 @@
 	&__slotLabel{
 		text-align: center;
 		font-family: raleway;
+		padding-bottom: 50px;
 			&__h1{
 				color: #FFCD05;	
 				font-size: 48px;	
@@ -36,7 +37,7 @@
 
 			&__paragraph{
 				color: white;
-				font-size: 14px;
+				font-size: 20px;
 				font-weight: 500;	
 				line-height: 16px;
 			}
@@ -78,7 +79,7 @@
 		text-align: center;
 		&__label{
 			margin: 10px;
-			color: #FFFFFF;
+			color: #FFCD05;
 			font-family: Raleway;
 			font-size: 24px;
 			font-weight: bold;	
@@ -114,6 +115,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		padding: 25px;
 		&__icon{
 			width: 10%;
 			margin: 10px;
